# store

./: db.sqlite3  pyproject.toml
common/: views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  views.py
products/api/: urls.py
products/fixtures/: categories.json  products.json
products/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_basket.py  0004_alter_product_options_alter_productcategory_options.py
products/templates/products/: base.html  basket.html  index.html  products.html
user/: admin.py  forms.py  models.py  views.py
user/api/: urls.py
user/migrations/: 0001_initial.py  0002_users_is_verified_mail_emailverification.py  0003_alter_users_email.py
user/templates/user/: base.html  email_verification.html  login.html  profile.html  register.html
